syntax = "proto3"

package = microservice_capacity_analyzer;

service MicroserviceCapacityAnalyzer {
  rpc ScalingInspection(ResourceDataList) returns (ARMDecisionList)
}

message ResourceData {
  string microservice_data = 1;
  int32 current_reps = 2;
  int32 desired_reps = 3;
  int32 cpu_usage_per_rep = 4;
  int32 cpu_request_per_rep = 5;
  int32 cpu_utilization_per_rep = 6;
  int32 desired_for_scale_reps = 7;
  string scaling_action = 8;
  int32 max_reps = 9;
  int32 min_reps = 10;
  int32 target_cpu_utilization = 11;
}

message ResourceDataList {
  repeated ResourceData microservices_data = 1;
}

message ARMDecision {
  string microservice_name = 1;
  string allowed_scaling_action = 2;
  int32 feasible_reps = 3;
  int32 arm_max_reps = 4;
  int32 cpu_request_per_rep = 5;
}

message ARMDecisionList {
  repeated ARMDecision scaling_instructions = 1;
}
